Created DotMake.CommandLine.Shared project and moved shared code to there
Using a shared project (.shproj) should be better for code refactoring than using <Compile Link="..."> items.

Also remove time from generated files, as time should only be used for debug because it causes unnecessary changes in source control in TestApp with EmitCompilerGeneratedFiles.

--- a/src/DotMake.CommandLine.SourceGeneration/DotMake.CommandLine.SourceGeneration.csproj
+++ b/src/DotMake.CommandLine.SourceGeneration/DotMake.CommandLine.SourceGeneration.csproj
@@ -11,9 +11,7 @@
     <Description>Incremental source generator for DotMake.CommandLine.</Description>
   </PropertyGroup>
 
-  <ItemGroup>
-    <Compile Include="..\DotMake.CommandLine\Common\**\*.cs" Link="Common\%(RecursiveDir)\%(FileName)%(Extension)" />
-  </ItemGroup>
+  <Import Project="..\DotMake.CommandLine.Shared\DotMake.CommandLine.Shared.projitems" Label="Shared" />
 
   <ItemGroup>
     <!-- 
