--- a/src/TestNugetApp/TestNugetApp.csproj
+++ b/src/TestNugetApp/TestNugetApp.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <!-- 
       EmitCompilerGeneratedFiles is useful for debugging, it doesn't work for live editing (VS continues to run the cached 
       source generator, needs restart as it uses VBCSCompiler.exe for Roslyn analyzers/generators) but when project is 
@@ -15,6 +15,24 @@
     -->
     <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
     <CompilerGeneratedFilesOutputPath>GeneratedFiles</CompilerGeneratedFilesOutputPath>
+
+    <!--
+      Use PublishTrimmed.pubxml profile when publishing to test "Trim self-contained deployment", results will be in bin\publish\trimmed
+      https://learn.microsoft.com/en-us/dotnet/core/deploying/trimming/trim-self-contained
+
+      Note that for AOT, you need to make sure to install the "Desktop development with C++" workload from
+      Visual Studio 2022 installer. Without it you may see errors like error : Platform linker not found 
+    -->
+    <PublishTrimmed>true</PublishTrimmed>
+
+    <!--
+      Use PublishAot.pubxml profile when publishing to test "Native AOT deployment", results will be in bin\publish\aot
+      https://learn.microsoft.com/en-us/dotnet/core/deploying/native-aot/?tabs=net7%2Cwindows#limitations-of-native-aot-deployment
+      
+      Note that for AOT, you need to make sure to install the "Desktop development with C++" workload from
+      Visual Studio 2022 installer. Without it you may see errors like error : Platform linker not found 
+    -->
+    <!--<PublishAot>true</PublishAot>-->
   </PropertyGroup>
 
   <ItemGroup>
