Added .editorconfig file and normalized tabs to spaces
Visual Studio messes with tabs and spaces due to default setting "adaptive formatting". Adding .editorconfig file forces the indent rules and then running "dotnet format whitespace" command fixed all files in the solution.

--- a/src/TestNugetApp/TestNugetApp.csproj
+++ b/src/TestNugetApp/TestNugetApp.csproj
@@ -17,16 +17,13 @@
     <CompilerGeneratedFilesOutputPath>GeneratedFiles</CompilerGeneratedFilesOutputPath>
 
     <!--
-      Use PublishTrimmed.pubxml profile when publishing to test "Trim self-contained deployment", results will be in bin\publish\trimmed
+      Use PublishTrimmed.pubxml profile when publishing to test "Trim self-contained deployment", results will be in bin\Publish\trimmed
       https://learn.microsoft.com/en-us/dotnet/core/deploying/trimming/trim-self-contained
-
-      Note that for AOT, you need to make sure to install the "Desktop development with C++" workload from
-      Visual Studio 2022 installer. Without it you may see errors like error : Platform linker not found 
     -->
-    <PublishTrimmed>true</PublishTrimmed>
+    <!--<PublishTrimmed>true</PublishTrimmed>-->
 
     <!--
-      Use PublishAot.pubxml profile when publishing to test "Native AOT deployment", results will be in bin\publish\aot
+      Use PublishAot.pubxml profile when publishing to test "Native AOT deployment", results will be in bin\Publish\aot
       https://learn.microsoft.com/en-us/dotnet/core/deploying/native-aot/?tabs=net7%2Cwindows#limitations-of-native-aot-deployment
       
       Note that for AOT, you need to make sure to install the "Desktop development with C++" workload from
