--- a/src/TestNugetApp/TestNugetApp.csproj
+++ b/src/TestNugetApp/TestNugetApp.csproj
@@ -1,8 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
+    <Product>DotMake Command-Line TestNugetApp</Product>
     <!-- 
       EmitCompilerGeneratedFiles is useful for debugging, it doesn't work for live editing (VS continues to run the cached 
       source generator, needs restart as it uses VBCSCompiler.exe for Roslyn analyzers/generators) but when project is 
