Added nuget.config with local packageSource
So that TestNugetApp can find the latest built package which is not published yet. Also make sure non-release packages are output in a subfolder not the main folder (e.g. Publish\Debug)

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -22,6 +22,7 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageOutputPath>$(RepositoryRootPath)publish</PackageOutputPath>
+    <PackageOutputPath Condition="'$(Configuration)' != 'Release'">$(PackageOutputPath)\$(Configuration)</PackageOutputPath>
   </PropertyGroup>
 
   <!-- Include default NuGet package custom files in projects except sandcastle help file builder projects -->
