Added <IsTrimmable>and <IsAotCompatible> to DotMake.CommandLine.csproj
Surprisingly trimming (and so aot) works with reflection (unless the type is ambiguous e.g. loaded from a string)

--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <!-- AssemblyTitle needs to be set in .targets which is imported after .csproj -->
-    <AssemblyTitle>$(AssemblyName) ($(TargetFramework))</AssemblyTitle>
+    <AssemblyTitle Condition="'$(OutputType)' != 'Exe'">$(AssemblyName) ($(TargetFramework))</AssemblyTitle>
   </PropertyGroup>
 
   <!--
