--- a/src/DotMake.CommandLine/DotMake.CommandLine.csproj
+++ b/src/DotMake.CommandLine/DotMake.CommandLine.csproj
@@ -19,9 +19,12 @@
     <Description>Declarative syntax for System.CommandLine via attributes for easy, fast, strongly-typed (no reflection) usage. Includes a source generator which automagically converts your classes to CLI commands and properties to CLI options or CLI arguments.</Description>
     <PackageTags>command-line CLI console System.CommandLine declarative attributes parsing command argument option generator</PackageTags>
     <PackageReleaseNotes>
-      - Added: For a CLI option or argument, any type with a public constructor or a static `Parse` method with a string parameter
-        can be now be used. These types can be bound/parsed automatically even if they are wrapped with `Enumerable` or `Nullable`
-        type (note that as of current version, custom class support when using AOT compilation is not stable but trimming works)
+      - Changed behaviour: Added Required property to CliArgumentAttribute, default is true for arguments.
+        Default is false for options (already had Required property). Whether you specify a default value for a property will
+        no longer effect the requirement of the argument or option. By contrast, when you set Required to true, the default value
+        of the property will be ignored.
+      - Beautified help output: Moved [required] label to description (second column), prevented display of empty [] default values.
+        For wrong inputs, only errors will be shown and not the complete help output below.
     </PackageReleaseNotes>
   </PropertyGroup>
 
