Optimized custom type parsing
Optimized custom type parsing for CLI options/arguments feature added in v1.5.0. It's now fully compatible (stable) with AOT compilation !

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <!-- https://learn.microsoft.com/en-us/dotnet/core/project-sdk/msbuild-props#generateassemblyinfo -->
-    <VersionPrefix>1.5.2</VersionPrefix>
+    <LangVersion>10.0</LangVersion>
+    <VersionPrefix>1.5.4</VersionPrefix>
     <Product>DotMake Command-Line</Product>
     <Company>DotMake</Company>
     <!-- Copyright is also used for NuGet metadata -->
