--- a/src/DotMake.CommandLine.SourceGeneration/DotMake.CommandLine.SourceGeneration.csproj
+++ b/src/DotMake.CommandLine.SourceGeneration/DotMake.CommandLine.SourceGeneration.csproj
@@ -14,6 +14,14 @@
   <Import Project="..\DotMake.CommandLine.Shared\DotMake.CommandLine.Shared.projitems" Label="Shared" />
 
   <ItemGroup>
+    <Compile Remove="Embedded\ModuleInitializerAttribute.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Embedded\ModuleInitializerAttribute.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <!-- 
     Microsoft.CodeAnalysis.CSharp 4.0.1 is the first version that can be used with the .NET 6.0 SDK 
     https://github.com/dotnet/roslyn/blob/main/docs/wiki/NuGet-packages.md
