Use `<SatelliteResourceLanguages>en</SatelliteResourceLanguages>` in TestApp projects
Prevent satellite resource DLL pollution (which come from System.CommandLine package) in bin folder, by setting a specific culture

--- a/src/TestApp.NugetDI/TestApp.NugetDI.csproj
+++ b/src/TestApp.NugetDI/TestApp.NugetDI.csproj
@@ -6,6 +6,8 @@
     <Product>DotMake Command-Line TestApp.NugetDI</Product>
     <!-- Generated files output path, excluding from compile and cleaning before build, are all handled in Directory.Build.targets  -->
     <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+    <!-- Prevent satellite resource DLL pollution (which come from System.CommandLine package) in bin folder, by setting a specific culture -->
+    <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
   </PropertyGroup>
 
   <ItemGroup>
