--- a/src/TestApp.NugetAot/TestApp.NugetAot.csproj
+++ b/src/TestApp.NugetAot/TestApp.NugetAot.csproj
@@ -6,6 +6,8 @@
     <Product>DotMake Command-Line TestApp.NugetAot</Product>
     <!-- Generated files output path, excluding from compile and cleaning before build, are all handled in Directory.Build.targets  -->
     <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+    <!-- Prevent satellite resource DLL pollution (which come from System.CommandLine package) in bin folder, by setting a specific culture -->
+    <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
 
     <!--
       Use PublishTrimmed.pubxml profile when publishing to test "Trim self-contained deployment", results will be in bin\Publish\trimmed
