--- a/src/DotMake.CommandLine.Examples/DotMake.CommandLine.Examples.csproj
+++ b/src/DotMake.CommandLine.Examples/DotMake.CommandLine.Examples.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\DotMake.CommandLine.SourceGeneration\DotMake.CommandLine.SourceGeneration.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" PrivateAssets="all" />
+  </ItemGroup>
+
 </Project>
