--- a/src/DotMake.CommandLine.Examples/DotMake.CommandLine.Examples.csproj
+++ b/src/DotMake.CommandLine.Examples/DotMake.CommandLine.Examples.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
+    <LangVersion Condition="$(TargetFramework) == 'netstandard2.0'">10.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
