--- a/src/TestApp/TestApp.csproj
+++ b/src/TestApp/TestApp.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFrameworks>net6.0;net472</TargetFrameworks>
+    <LangVersion>11.0</LangVersion>
     <Product>DotMake Command-Line TestApp</Product>
     <!-- Generated files output path, excluding from compile and cleaning before build, are all handled in Directory.Build.targets  -->
     <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
