Optimize SourceGeneration.Embedded project

--- a/src/DotMake.CommandLine.SourceGeneration.Embedded/DotMake.CommandLine.SourceGeneration.Embedded.csproj
+++ b/src/DotMake.CommandLine.SourceGeneration.Embedded/DotMake.CommandLine.SourceGeneration.Embedded.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
-    <!-- Make sure it compiles for lowest supported langversion 7.3 as source may be generated in a netstandard2.0 project -->
-    <LangVersion>7.3</LangVersion>
+    <!-- Make sure it compiles for lowest supported LangVersion 9.0 as source may be generated in a netstandard2.0 project -->
+    <LangVersion>9.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
