--- a/src/TestApp.NugetAot/TestApp.NugetAot.csproj
+++ b/src/TestApp.NugetAot/TestApp.NugetAot.csproj
@@ -1,28 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <Product>DotMake Command-Line TestApp.NugetAot</Product>
+
     <!-- Generated files output path, excluding from compile and cleaning before build, are all handled in Directory.Build.targets  -->
     <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
-    <!-- Prevent satellite resource DLL pollution (which come from System.CommandLine package) in bin folder, by setting a specific culture -->
-    <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
 
-    <!--
-      Use PublishTrimmed.pubxml profile when publishing to test "Trim self-contained deployment", results will be in bin\Publish\trimmed
-      https://learn.microsoft.com/en-us/dotnet/core/deploying/trimming/trim-self-contained
-    -->
-    <!--<PublishTrimmed>true</PublishTrimmed>-->
-
-    <!--
-      Use PublishAot.pubxml profile when publishing to test "Native AOT deployment", results will be in bin\Publish\aot
-      https://learn.microsoft.com/en-us/dotnet/core/deploying/native-aot/?tabs=net7%2Cwindows#limitations-of-native-aot-deployment
-      
-      Note that for AOT, you need to make sure to install the "Desktop development with C++" workload from
-      Visual Studio 2022 installer. Without it you may see errors like error : Platform linker not found 
-    -->
-    <!--<PublishAot>true</PublishAot>-->
+    <PublishDir
+      Condition="'$(PublishTrimmed)' == 'true' AND '$(PublishAot)' != 'true' AND '$(PublishDir)' == ''">bin\$(Configuration)\$(TargetFramework)\$(RuntimeIdentifier)\publish-trimmed</PublishDir>
+    <PublishDir
+      Condition="'$(PublishAot)' == 'true' AND '$(PublishDir)' == ''">bin\$(Configuration)\$(TargetFramework)\$(RuntimeIdentifier)\publish-aot</PublishDir>
   </PropertyGroup>
 
   <ItemGroup>
